Integrated Database and splitted the graphQL
