# Assignment 2 - Api/express/src/swagger/handlers.js
@@ -3,41 +3,23 @@ const dudeService = require('../service/dudeService');
 
 module.exports = {
     addDude: function (req, res) {
-        const dude = dudeService.addDude(req.body.name);
-        res.status(200).json(dude);
-    },
-    addFriend: function (req, res) {
-        const dude = dudeService.addFriend(req.swagger.params.dudeId, req.swagger.params.friendId);
-
-        res.status(200).json(dude);
-    },
-    findDudesByStatus: function (req, res) {
-        console.log(req);
-        const dudes = dudeService.findByStatus(req.query.status);
-
-        res.status(200).json(dudes);
+        dudeService.addDude(req.body.name).then(dude => {
+            res.status(200).json(dude);
+        });
     },
     getArticleById: function (req, res) {
-        const article = articleService.findById(req.swagger.params.articleId);
-
-        res.status(200).json(article);
+        return  articleService.findById(req.swagger.params.articleId).then(article => {
+            return res.status(200).json(article);
+        });
     },
     getDudeById: function (req, res) {
-        const dude = dudeService.findById(req.swagger.params.dudeId);
-
-        res.status(200).json(dude);
-    },
-    updateDudeWithForm: function (req, res) {
-        console.log('updateDudeWithForm', req.swagger);
-        res.status(200).json({});
-    },
-    deleteDude: function (req, res) {
-        console.log('deleteDude', req.swagger);
-        res.status(200).json({});
+        return dudeService.findById(req.swagger.params.dudeId).then(dude => {
+            res.status(200).json(dude);
+        });
     },
     upvote: function (req, res) {
-        const article = articleService.upvoteArticle(req.swagger.params.articleId);
-
-        res.status(200).json(article);
+        return articleService.upvoteArticle(req.swagger.params.articleId).then(article => {
+            return res.status(200).json(article);
+        });
     }
 };
