# Assignment 2 - Api/express/src/swagger/swagger.json
@@ -71,103 +71,6 @@
         }
       }
     },
-    "/dude/{dudeId}/addFriend/{friendId}": {
-      "put": {
-        "tags": [
-          "dude"
-        ],
-        "summary": "Add a friend to an existing dude",
-        "description": "",
-        "operationId": "addFriend",
-        "consumes": [
-          "application/json",
-          "application/xml"
-        ],
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "dudeId",
-            "in": "path",
-            "description": "ID of dude who has a new friend",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "name": "friendId",
-            "in": "path",
-            "description": "ID of new friend",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Dude not found"
-          },
-          "405": {
-            "description": "Validation exception"
-          },
-          "406": {
-            "description": "Friend not found"
-          }
-        }
-      }
-    },
-    "/dude/findByStatus": {
-      "get": {
-        "tags": [
-          "dude"
-        ],
-        "summary": "Finds Dudes by status",
-        "description": "Multiple status values can be provided with comma separated strings",
-        "operationId": "findDudesByStatus",
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "status",
-            "in": "query",
-            "description": "Status values that need to be considered for filter",
-            "required": true,
-            "type": "array",
-            "items": {
-              "type": "string",
-              "enum": [
-                "available",
-                "pending",
-                "bowling"
-              ],
-              "default": "available"
-            },
-            "collectionFormat": "multi"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Dude"
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid status value"
-          }
-        }
-      }
-    },
     "/dude/{dudeId}": {
       "get": {
         "tags": [
@@ -197,86 +100,6 @@
               "$ref": "#/definitions/Dude"
             }
           },
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Dude not found"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "dude"
-        ],
-        "summary": "Updates a dude in the list with form data",
-        "description": "",
-        "operationId": "updateDudeWithForm",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "dudeId",
-            "in": "path",
-            "description": "ID of dude that needs to be updated",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "name": "name",
-            "in": "formData",
-            "description": "Updated name of the dude",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "status",
-            "in": "formData",
-            "description": "Updated status of the dude",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Invalid input"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "dude"
-        ],
-        "summary": "Deletes a dude",
-        "description": "",
-        "operationId": "deleteDude",
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "api_key",
-            "in": "header",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "dudeId",
-            "in": "path",
-            "description": "Dude id to delete",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
           "400": {
             "description": "Invalid ID supplied"
           },
